# OpenGL-Doc-Generator

./: .gitmodules  CMakeLists.txt  README.md  gl.h  gl_doc.h  gl_doc_full.h  gl_doc_generator.py  test.h  test_doc.h
src/: load_file.cpp  load_file.h  main.cpp
